--- a/src/components/button/circular_button/styles.css
+++ b/src/components/button/circular_button/styles.css
@@ -2,7 +2,7 @@
 	border-radius: 50%;
 	height: 3.5rem;
 	width: 3.5rem;
-	background-color: var(--home-icons);
+	background-color: #977569;
 	box-shadow: 0rem 0.188rem 0.313rem -0.063rem rgba(0, 0, 0, 0.2),
 		0rem 0.375rem 0.625rem 0rem rgba(0, 0, 0, 0.14),
 		0rem 0.063rem 1.125rem 0rem rgba(0, 0, 0, 0.12);
