--- a/src/views/main/home/styles.css
+++ b/src/views/main/home/styles.css
@@ -51,8 +51,8 @@
 	width: 90%;
 	padding: 0.5rem;
 	height: auto;
-	fill: var(--dark-color);
-	opacity: 0.7;
+	fill: var(--light-color);
+	opacity: 0.4;
 }
 
 .home .info__grid {
