--- a/src/components/drawer_navigation/content/styles.css
+++ b/src/components/drawer_navigation/content/styles.css
@@ -27,3 +27,7 @@
 .MuiFormLabel-root.Mui-focused.Mui-focused {
 	color: var(--other-details);
 }
+
+.MuiInputBase-root.Mui-focused.Mui-focused::after {
+	border-bottom-color: var(--other-details);
+}
