mais coisinhas do jogo

--- a/src/views/kids_space/game_menu/dino_slider/board/styles.css
+++ b/src/views/kids_space/game_menu/dino_slider/board/styles.css
@@ -1,4 +1,7 @@
 .board {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  background-color: beige;
+  height: 100vh;
+  padding: 40% 0;
 }
