center dialog and fix boolean

--- a/src/components/kids_space_dialog/game_over_dialog/styles.css
+++ b/src/components/kids_space_dialog/game_over_dialog/styles.css
@@ -3,6 +3,8 @@
 	width: 80vw;
 	height: 30vh;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+	top: 35vh;
+	left: 10vw;
 }
 
 .game_over_dialog__content {
