--- a/src/components/drawer_navigation/content/app_bar/styles.css
+++ b/src/components/drawer_navigation/content/app_bar/styles.css
@@ -15,3 +15,15 @@
 	margin-left: 0.8rem;
 	margin-right: 0.8rem;
 }
+
+@media (orientation: landscape) {
+	.drawer__navigation__app_bar {
+		height: 4rem;
+	}
+
+	.drawer__navigation__app_bar .button svg {
+		width: 3.2rem;
+		height: 3.2rem;
+		margin: 0 1.2rem;
+	}
+}
