Feat (musical dino new color + viewbox adjusted for happy dino)

--- a/src/views/kids_space/variables.css
+++ b/src/views/kids_space/variables.css
@@ -21,8 +21,8 @@
 	--dino-runner-game-board-background: #1e344b;
 
 	/* Musical Dino */
-	--musical-dino-game-background-color: #281c3d;
-	--musical-dino-game-button-background-color: #add8e6;
+	--musical-dino-game-background-color: #f2f2f2;
+	--musical-dino-game-button-background-color: #B94189;
 
 	/* Snake */
 	--snake-game-score-background-color: #694e73;
