--- a/src/views/kids_space/game_menu/musical_dino/styles.css
+++ b/src/views/kids_space/game_menu/musical_dino/styles.css
@@ -3,11 +3,11 @@
 	height: 100vh;
 	margin: 0;
 	background-color: var(--musical-dino-game-background-color);
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23281c3d' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23645873'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
+	background-image: url("data:image/svg+xml,%3Csvg width='84' height='16' viewBox='0 0 84 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M78 7V4h-2v3h-3v2h3v3h2V9h3V7h-3zM30 7V4h-2v3h-3v2h3v3h2V9h3V7h-3zM10 0h2v16h-2V0zm6 0h4v16h-4V0zM2 0h4v16H2V0zm50 0h2v16h-2V0zM38 0h2v16h-2V0zm28 0h2v16h-2V0zm-8 0h6v16h-6V0zM42 0h6v16h-6V0z' fill='%23febf95' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 #musical_dino__header__turn {
-	color: var(--light-color);
+	color: var(--dark-color);
 	font-size: var(--titan-font);
 	margin-left: auto;
 	padding: 0.5rem;
@@ -21,18 +21,20 @@
 .musical_dino__header .icon_button svg {
 	width: 3rem;
 	height: 3rem;
+	fill: var(--musical-dino-game-button-background-color);
 }
 
 .musical_dino__start_game {
 	width: 100vw;
-	display: flex;
-	align-items: center;
+	position: absolute;
 	justify-content: center;
-	margin-top: 10vmin;
+	bottom: 10vmin;
+    left: 30vw;
 }
 
 .musical_dino__start_game__button {
 	background-color: var(--musical-dino-game-button-background-color);
+	color: var(--light-color);
 	border: none;
 	text-align: center;
 	text-decoration: none;
@@ -56,7 +58,6 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	margin-top: 10vmin;
 }
 
 .musical_dino__dino_song_board__top {
@@ -69,10 +70,14 @@
 
 .musical_dino__dino {
 	width: 40vmin;
-	height: 40vmin;
+	height: 60vmin;
 	max-width: 200px;
 	max-height: 200px;
 	margin: 5vmin;
+}
+
+.musical_dino__dino svg {
+	height: 55vmin;
 }
 
 .musical_dino__dino_moving svg {
@@ -81,101 +86,171 @@
 	animation-iteration-count: 2;
 }
 
-.musical_dino__dino_green .musical_dino__dark_color {
-	fill: var(--dino-green-dark-color);
+.musical_dino__dino_light_pink .dark_color {
+	fill: #9D497A;
 }
 
-.musical_dino__dino_green .musical_dino__main_color {
-	fill: var(--dino-green-main-color);
+.musical_dino__dino_light_pink .main_color {
+	fill: #D161A2;
 }
 
-.musical_dino__dino_green .musical_dino__light_color {
-	fill: var(--dino-green-light-color);
+.musical_dino__dino_light_pink .light_color {
+	fill: #E8B0D1;
 }
 
-.musical_dino__dino_yellow .musical_dino__dark_color {
-	fill: var(--dino-yellow-dark-color);
+.musical_dino__dino_light_pink .details_color {
+	fill: #833D65;
 }
 
-.musical_dino__dino_yellow .musical_dino__main_color {
-	fill: var(--dino-yellow-main-color);
+.musical_dino__dino_light_pink .scale_color {
+	fill: #7A0149;
 }
 
-.musical_dino__dino_yellow .musical_dino__light_color {
-	fill: var(--dino-yellow-light-color);
+
+.musical_dino__dino_orange .dark_color {
+	fill: #BE7240;
 }
 
-.musical_dino__dino_red .musical_dino__dark_color {
-	fill: var(--dino-red-dark-color);
+.musical_dino__dino_orange .main_color {
+	fill: #FD9855;
 }
 
-.musical_dino__dino_red .musical_dino__main_color {
-	fill: var(--dino-red-main-color);
+.musical_dino__dino_orange .light_color {
+	fill: #FECCAA;
 }
 
-.musical_dino__dino_red .musical_dino__light_color {
-	fill: var(--dino-red-light-color);
+.musical_dino__dino_orange .details_color {
+	fill: #9E5F35;
 }
 
-.musical_dino__dino_blue .musical_dino__dark_color {
-	fill: var(--dino-blue-dark-color);
+.musical_dino__dino_orange .scale_color {
+	fill: #9D497A;
 }
 
-.musical_dino__dino_blue .musical_dino__main_color {
-	fill: var(--dino-blue-main-color);
+
+.musical_dino__dino_red .dark_color {
+	fill: #9F2100;
 }
 
-.musical_dino__dino_blue .musical_dino__light_color {
-	fill: var(--dino-blue-light-color);
+.musical_dino__dino_red .main_color {
+	fill: #D42C00;
 }
 
-.musical_dino__dino_green.musical_dino__dino_moving .musical_dino__dark_color {
-	fill: #74a791;
+.musical_dino__dino_red .light_color {
+	fill: #EA9580;
 }
 
-.musical_dino__dino_green.musical_dino__dino_moving .musical_dino__main_color {
-	fill: #9bdfc1;
+.musical_dino__dino_red .details_color {
+	fill: #851B00;
 }
 
-.musical_dino__dino_green.musical_dino__dino_moving .musical_dino__light_color {
-	fill: #cdefe0;
+.musical_dino__dino_red .scale_color {
+	fill: #851B00;
 }
 
-.musical_dino__dino_yellow.musical_dino__dino_moving .musical_dino__dark_color {
-	fill: #bfb8a5;
+
+.musical_dino__dino_dark_pink .dark_color {
+	fill: #7A0149;
 }
 
-.musical_dino__dino_yellow.musical_dino__dino_moving .musical_dino__main_color {
-	fill: #fff5dc;
+.musical_dino__dino_dark_pink .main_color {
+	fill: #A20161;
 }
 
-.musical_dino__dino_yellow.musical_dino__dino_moving
-	.musical_dino__light_color {
-	fill: #fffaed;
+.musical_dino__dino_dark_pink .light_color {
+	fill: #D180B0;
 }
 
-.musical_dino__dino_red.musical_dino__dino_moving .musical_dino__dark_color {
-	fill: #a77e7e;
+.musical_dino__dino_dark_pink .details_color {
+	fill: #65013D;
 }
 
-.musical_dino__dino_red.musical_dino__dino_moving .musical_dino__main_color {
-	fill: #dfa8a8;
+.musical_dino__dino_dark_pink .scale_color {
+	fill: #FD9855;
 }
 
-.musical_dino__dino_red.musical_dino__dino_moving .musical_dino__light_color {
-	fill: #efd3d3;
+
+.musical_dino__dino_light_pink.musical_dino__dino_moving .dark_color {
+	fill: #B6779B;
 }
 
-.musical_dino__dino_blue.musical_dino__dino_moving .musical_dino__dark_color {
-	fill: #93adb9;
+.musical_dino__dino_light_pink.musical_dino__dino_moving .main_color {
+	fill: #DD89B9;
 }
 
-.musical_dino__dino_blue.musical_dino__dino_moving .musical_dino__main_color {
-	fill: #c4e7f7;
+.musical_dino__dino_light_pink.musical_dino__dino_moving .light_color {
+	fill: #EEC4DD;
 }
 
-.musical_dino__dino_blue.musical_dino__dino_moving .musical_dino__light_color {
-	fill: #e2f3fb;
+.musical_dino__dino_light_pink.musical_dino__dino_moving .details_color {
+	fill: #A26E8C;
+}
+
+.musical_dino__dino_light_pink.musical_dino__dino_moving .scale_color {
+	fill: #9B4177;
+}
+
+
+.musical_dino__dino_orange.musical_dino__dino_moving .dark_color {
+	fill: #CE9570;
+}
+
+.musical_dino__dino_orange.musical_dino__dino_moving .main_color {
+	fill: #FEB280;
+}
+
+.musical_dino__dino_orange.musical_dino__dino_moving .light_color {
+	fill: #FED9BF;
+}
+
+.musical_dino__dino_orange.musical_dino__dino_moving .details_color {
+	fill: #B68768;
+}
+
+.musical_dino__dino_orange.musical_dino__dino_moving .scale_color {
+	fill: #B6779B;
+}
+
+
+.musical_dino__dino_red.musical_dino__dino_moving .dark_color {
+	fill: #B75940;
+}
+
+.musical_dino__dino_red.musical_dino__dino_moving .main_color {
+	fill: #DF6140;
+}
+
+.musical_dino__dino_red.musical_dino__dino_moving .light_color {
+	fill: #EFB0A0;
+}
+
+.musical_dino__dino_red.musical_dino__dino_moving .details_color {
+	fill: #A45440;
+}
+
+.musical_dino__dino_red.musical_dino__dino_moving .scale_color {
+	fill: #A45440;
+}
+
+
+.musical_dino__dino_dark_pink.musical_dino__dino_moving .dark_color {
+	fill: #9B4177;
+}
+
+.musical_dino__dino_dark_pink.musical_dino__dino_moving .main_color {
+	fill: #B94189;
+}
+
+.musical_dino__dino_dark_pink.musical_dino__dino_moving .light_color {
+	fill: #DDA0C4;
+}
+
+.musical_dino__dino_dark_pink.musical_dino__dino_moving .details_color {
+	fill: #8C416E;
+}
+
+.musical_dino__dino_dark_pink.musical_dino__dino_moving .scale_color {
+	fill: #FEB280;
 }
 
 @keyframes dino-rotation-animation {
