colors of icon_button

--- a/src/components/button/icon_button/style.css
+++ b/src/components/button/icon_button/style.css
@@ -4,12 +4,13 @@
 }
 
 .icon_button svg {
-	fill: var(--dark-color);
+	fill: var(--light-color);
 	margin: 0;
 }
 
 .icon_button.button_dark svg {
-	fill: var(--base-font-color);
+	fill: var(--dark-color);
+	margin: 0;
 }
 
 .icon_button.button_bigger svg {
