--- a/src/views/login/styles.css
+++ b/src/views/login/styles.css
@@ -2,7 +2,7 @@
 	position: relative;
 	overflow: hidden;
 	width: 100%;
-	padding-top: 45%;
+	padding-top: 15vh;
 	height: 100%;
 	background-color: var(--login-background);
 	display: flex;
@@ -12,7 +12,7 @@
 }
 
 .login__logo {
-	width: 10rem;
+	width: 20rem;
 	height: auto;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .login__content__button {
-	margin-top: 5rem;
+	margin-top: 20vh;
 }
 
 .login__content__message {
