--- a/src/views/main/settings/styles.css
+++ b/src/views/main/settings/styles.css
@@ -117,3 +117,38 @@
 .settings__change_password_dialog__error_message {
 	color: #FF7676;
 }
+
+@media (orientation: landscape) {
+	.settings {
+		width: 60vw;
+		margin: 0 20vw;
+	}
+
+	.settings__title.MuiTypography-root {
+		font-size: 3rem;
+	}
+
+	.settings .settings__form {
+		margin: 25px;
+	}
+
+	.button.text_button.settings__form__change_password,
+	.button.text_button.settings__form__delete_account {
+		font-size: 1.4rem;
+		padding: 1rem;
+	}
+
+	.settings__save_button_container {
+		bottom: 4.5rem;
+	}
+
+	.button.settings__save_button {
+		font-size: 1.4rem;
+	}
+
+	.button.settings__save_button svg {
+		width: 2.5rem;
+		height: 2.5rem;
+		margin-right: 1rem;
+	}
+}
