Feat ( contacts for desktop )

--- a/src/components/list_components/list_title/styles.css
+++ b/src/components/list_components/list_title/styles.css
@@ -12,3 +12,9 @@
 .list__title .MuiTypography-root.MuiTypography-body1 {
 	text-align: left;
 }
+
+@media (orientation: landscape) {
+	.list__title p {
+		font-size: 2.5rem;
+	}
+}
