--- a/src/MaterialUI.css
+++ b/src/MaterialUI.css
@@ -106,3 +106,15 @@ body .MuiInputBase-root {
 	/* fill: var(--contrast-color); */
 	fill: #fafafa;
 }
+
+@media (orientation: landscape) {
+	body .MuiListItemText-root .MuiTypography-body1 {
+		font-size: 1.6rem;
+	}
+
+	body .MuiAvatar-root {
+		width: 50px;
+		height: 50px;
+		margin-right: 10px;
+	}
+}
