--- a/src/components/button/icon_button/style.css
+++ b/src/components/button/icon_button/style.css
@@ -17,3 +17,10 @@
 	height: 2.188rem;
 	width: 2.188rem;
 }
+
+@media (orientation: landscape) {
+	.icon_button svg {
+		width: 1.8rem;
+		height: 1.8rem;
+	}
+}
