Feat ( adjusting top svg size )

--- a/src/components/button/icon_button/style.css
+++ b/src/components/button/icon_button/style.css
@@ -17,3 +17,10 @@
 	height: 2.188rem;
 	width: 2.188rem;
 }
+
+@media (orientation: landscape) {
+	.icon_button.button_bigger svg {
+		height: 3rem;
+		width: 3rem;
+	}
+}
