--- a/src/MaterialUI.css
+++ b/src/MaterialUI.css
@@ -116,8 +116,8 @@ body .MuiInputBase-root {
 		width: 50px;
 		height: 50px;
 		margin-right: 10px;
-=======
-	body .MuiFormLabel-root {
+	}
+		body .MuiFormLabel-root {
 		font-size: 1.4rem;
 	}
 
