--- a/src/views/kids_space/game_menu/tic_tac_dino/styles.css
+++ b/src/views/kids_space/game_menu/tic_tac_dino/styles.css
@@ -3,10 +3,11 @@
 	background-image: url("data:image/svg+xml,%3Csvg width='250' height='250' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 18c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm48 25c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm-43-7c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm63 31c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM34 90c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm56-76c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM12 86c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm28-65c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm23-11c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-6 60c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm29 22c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zM32 63c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm57-13c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-9-21c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM60 91c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM35 41c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM12 60c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2z' fill='%239C92AC' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 	height: 100vh;
 	width: 100vw;
-	padding-top: 20vh;
+	padding-top: 8vh;
 }
 
-.tic_tac_dino_game .board {
+.tic_tac_dino_game .tic_tac__board {
+	margin: 3em auto;
 	background: var(--tic-tac-dino-background-color);
 	width: 100vmin;
 	height: 100vmin;
@@ -17,7 +18,7 @@
 	gap: 0.5rem;
 }
 
-.tic_tac_dino_game .squares {
+.tic_tac_dino_game .tic_tac_dino__square {
 	background: var(--tic-tac-dino-square-background-color);
 	border: none;
 	border-radius: 0.7rem;
@@ -46,7 +47,7 @@
 	color: var(--dark-color);
 	display: flex;
 	width: fit-content;
-	margin: 1rem;
+	margin: 3rem auto;;
 	padding: 0.6rem;
 	border-radius: 0.7rem;
 	font-size: var(--big-font);
