Feat (responsive snake game)

--- a/src/views/kids_space/variables.css
+++ b/src/views/kids_space/variables.css
@@ -25,7 +25,7 @@
 	--musical-dino-game-button-background-color: #B94189;
 
 	/* Snake */
-	--snake-game-score-background-color: #694e73;
+	--snake-game-score-background-color: #f5f5f5;
 
 	/* Tic Tac Dino */
 	--tic-tac-dino-background-color: #cec1e7;
