Feat ( responsive tic-tac-dino )

--- a/src/views/kids_space/game_menu/tic_tac_dino/styles.css
+++ b/src/views/kids_space/game_menu/tic_tac_dino/styles.css
@@ -52,3 +52,10 @@
 	border-radius: 0.7rem;
 	font-size: var(--big-font);
 }
+
+@media (orientation: landscape) {
+	.tic_tac_dino_game .tic_tac__board {
+		max-width: 70vmin;
+		max-height: 70vmin;
+	}
+}
