--- a/src/views/kids_space/game_menu/dino_slider/board/styles.css
+++ b/src/views/kids_space/game_menu/dino_slider/board/styles.css
@@ -1,18 +1,34 @@
-.board {
+.dino_slider {
+  background-color: beige;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dino_slider .board {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  background-color: beige;
-  height: 100vh;
-  padding: 40% 0;
+  margin-top: 15vh;
+  width: 100vmin;
+  height: 100vmin;
 }
 
 .slider__switch {
-  position: absolute;
-  right: 0;
-  margin: 20px 8px;
+    max-width: 20vw;
+    margin-left: auto;
+    margin-right: 40px;
 }
 
 .slider__switch .dino_switch__form p{
   margin-right: 0.2rem;
   color: var(--dark-color-transparency)
+}
+
+@media (orientation: landscape) {
+  .dino_slider .board {
+    margin-top: 5vh;
+    width: 85vmin;
+    height: 85vmin;
+  }
 }
