Feat ( adjusting bacteria size )

--- a/src/views/kids_space/game_menu/dino_runner/styles.css
+++ b/src/views/kids_space/game_menu/dino_runner/styles.css
@@ -256,4 +256,9 @@
 		max-width: 300px;
 		max-height: 300px;
 	}
+
+	.dino_runner_game__obstacle {
+		max-width: 200px;
+		max-height: 200px;
+	}
 }
