--- a/src/components/drawer_navigation/content/app_bar/styles.css
+++ b/src/components/drawer_navigation/content/app_bar/styles.css
@@ -11,7 +11,7 @@
 	fill: var(--light-color);
 }
 
-.drawer__navigation__app_bar__button.icon_button svg {
+.drawer__navigation__app_bar__button.dino_icon_button__button svg {
 	margin-left: 0.8rem;
 	margin-right: 0.8rem;
 }
@@ -21,7 +21,7 @@
 		height: 4rem;
 	}
 
-	.drawer__navigation__app_bar.icon_button .button svg {
+	.drawer__navigation__app_bar.dino_icon_button__button .button svg {
 		width: 3.2rem;
 		height: 3.2rem;
 		margin: 0 1.2rem;
