--- a/src/views/kids_space/dinogotchi/styles.css
+++ b/src/views/kids_space/dinogotchi/styles.css
@@ -148,7 +148,7 @@
 	height: 4rem;
 }
 
-.dinogotchi_screen .icon_button {
+.dinogotchi_screen .dino_icon_button__button {
 	position:absolute;
 	top: 3vmin;
 	left: 3vmin;
@@ -156,7 +156,7 @@
 	height: 16vmin;
 }
 
-.dinogotchi_screen .icon_button svg {
+.dinogotchi_screen .dino_icon_button__button svg {
 	fill: #A594AB;
 }
 
