--- a/src/views/kids_space/game_menu/musical_dino/styles.css
+++ b/src/views/kids_space/game_menu/musical_dino/styles.css
@@ -18,7 +18,7 @@
 	padding: 1rem;
 }
 
-.musical_dino__header .icon_button svg {
+.musical_dino__header .dino_icon_button__button svg {
 	width: 3rem;
 	height: 3rem;
 	fill: var(--musical-dino-game-button-background-color);
