--- a/src/views/terms_of_use/styles.css
+++ b/src/views/terms_of_use/styles.css
@@ -26,7 +26,7 @@
 	margin-bottom: 0.625rem;
 }
 
-.terms_of_use .icon_button.arrow_back svg {
+.terms_of_use .dino_icon_button__button.arrow_back svg {
 	fill: var(--contrast-color);
 }
 
