Refactor(DinoIconButton): com tooltips e + ,,,, isso deu trabalho

--- a/src/views/kids_space/game_menu/dino_slider/styles.css
+++ b/src/views/kids_space/game_menu/dino_slider/styles.css
@@ -16,3 +16,7 @@
   margin-right: 0.2rem;
   color: var(--dark-color-transparency)
 }
+
+.minigame.slider_dino .arrow_back__kids svg {
+  fill: var(--dark-color-transparency);
+}
