--- a/src/components/button/icon_button/style.css
+++ b/src/components/button/icon_button/style.css
@@ -1,26 +1,42 @@
-.dino_icon_button__button {
+.dino_icon_button .dino_icon_button__button {
 	background-color: transparent;
 	padding: 0;
+	width: inherit;
+	height: inherit;
 }
 
-.dino_icon_button__button svg {
+.dino_icon_button .dino_icon_button__tooltip {
+	width: fit-content;
+	height: fit-content;
+}
+
+.dino_icon_button .dino_icon_button__button svg {
 	fill: var(--contrast-color);
 	margin: 0;
 }
 
-.dino_icon_button__button.button_dark svg {
+.dino_icon_button .dino_icon_button__button.button_dark svg {
 	fill: var(--dark-color);
-	margin: 0;
 }
 
-.dino_icon_button__button.button_light svg {
+.dino_icon_button .dino_icon_button__button.button_light svg {
 	fill: var(--light-color);
-	margin: 0;
 }
 
-.dino_icon_button__button.button_bigger svg {
+.dino_icon_button .dino_icon_button__button.button_bigger svg {
 	height: 2.188rem;
 	width: 2.188rem;
+}
+
+.dino_icon_button.circular {
+	border-radius: 50%;
+	height: 3.0rem;
+	width: 3.0rem;
+	background-color: var(--circular-button);
+	fill: var(--light-color);
+	box-shadow: 0rem 0.188rem 0.313rem -0.063rem rgba(0, 0, 0, 0.2),
+		0rem 0.375rem 0.625rem 0rem rgba(0, 0, 0, 0.14),
+		0rem 0.063rem 1.125rem 0rem rgba(0, 0, 0, 0.12);
 }
 
 @media (orientation: landscape) {
